# group1-base

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TEAM_GUIDE.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
auth_service/: Dockerfile  __init__.py  deps.py  main.py  start.sh
auth_service/api/: __init__.py  deps.py
auth_service/core/: __init__.py  config.py  exceptions.py  jwt_keys.py  security.py  time_utils.py  token_hash.py
auth_service/crud/: __init__.py  credential_crud.py  permission_crud.py  role_crud.py  session_crud.py  token_crud.py
auth_service/migrations/: alembic.ini  env.py
auth_service/models/: __init__.py  credential.py  permission.py  role.py  session.py  token.py  user.py
auth_service/schemas/: __init__.py  auth_schema.py  user_schema.py
auth_service/services/: __init__.py  auth_service.py  identity_service.py  key_service.py  password_policy.py
design/: architecture-outline.md
design/v2/: 02-module-architecture.md  03-data-architecture.md  04-security-architecture.md  09-frontend-architecture.md
docs/: BRANCH_STRATEGY.md  TASK_BREAKDOWN.md  alembic-guide.md  auth-jwt-keys.md
docs/design/: db_design.md  design.md
docs/frontend/: README.md  development-guide.md
docs/test/: test-design.md  test-infra-plan.md
docs/tests/: README.md  test-guide.md  test-report.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
info_service/: Dockerfile  __init__.py  main.py  start.sh
info_service/api/: __init__.py  deps.py
info_service/core/: __init__.py  audit.py  config.py  exceptions.py  security.py
info_service/crud/: __init__.py  audit_log_crud.py  (+12 more)
require-spec/: design.md  requirement-spec.md
scripts/: Dockerfile  seed_auth.py  seed_data.py  seed_info.py  seed_utils.py
shared/: __init__.py  config.py  database.py  error_handlers.py  exceptions.py  logging.py  response.py  security.py
tests/: conftest.py  test_database.py  test_infra.py  utils.py
(+182 files in other folders)
