[project]
name = "stss-g1"
version = "0.1.0"
description = "STSS Smart Teaching Service System - Info Management & Auth Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: 冒烟测试 — 验证测试基础设施正确连接（app 可达、DB 可读写、工具函数正确）",
    "unit: 单元测试 — 隔离测试单个组件，不依赖外部服务",
    "integration: 集成测试 — 测试完整 Router → Service → CRUD → Model 链路",
    "regression: 回归测试 — 针对已修复 bug 的测试，防止问题复发",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--showlocals",
    "-ra",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)-7s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
